--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
 
 <body>
     <div class="container">
+        <div class="hamburguer">
+            <div class="line" id="line1"></div>
+            <div class="line" id="line2"></div>
+            <div class="line" id="line3"></div>
+            <span>fechar</span>
+        </div>
         <header>
             <div class="img-wrapper">
                 <img src="./img/BG.jpg" alt="">
@@ -25,7 +31,25 @@
                 <button>Saiba mais</button>
             </div>
         </header>
+        <div class="sidebar">
+            <nav>
+                <ul class="menu">
+                    <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
+                    <li class="menu-item"><a href="#" class="menu-link">Conhecimentos</a></li>
+                    <li class="menu-item"><a href="#" class="menu-link">Projetos</a></li>
+                    <li class="menu-item"><a href="#" class="menu-link">Contato</a></li>
+                    <li class="menu-item"><a href="#" class="menu-link">Orçamento</a></li>
+                </ul>
+            </nav>
+            <div class="social-media">
+                <a href="#"><i class="fab fa-github"></i></a>
+                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                <a href="#"><i class="fab fa-whatsapp"></i></a>
+            </div>
+        </div>
     </div>
 </body>
+<script src="./js/script.js"></script>
+<script src="https://kit.fontawesome.com/a2cc651a87.js" crossorigin="anonymous"></script>
 
 </html>
