:package: conhecimentos e projetos

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <button>Saiba mais</button>
             </div>
         </header>
-        <div class="sidebar">
+        <asider class="sidebar">
             <nav>
                 <ul class="menu">
                     <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
@@ -46,7 +46,132 @@
                 <a href="#"><i class="fab fa-linkedin-in"></i></a>
                 <a href="#"><i class="fab fa-whatsapp"></i></a>
             </div>
-        </div>
+        </asider>
+        <section class="sessao-conhecimentos">
+            <div class="sessao-header">
+                <h1>Conhecimentos</h1>
+            </div>
+            <div class="conhecimentos">
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-html5"></i>
+                        <h3>HTML</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat non ullam suscipit quidem
+                            fuga
+                            officiis? Modi nihil alias, asperiores in ipsa non possimus voluptatibus fugit quod eum aut
+                            dignissimos sunt?</p>
+                    </div>
+                </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-css3-alt"></i>
+                        <h3>CSS</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat non ullam suscipit quidem
+                            fuga
+                            officiis? Modi nihil alias, asperiores in ipsa non possimus voluptatibus fugit quod eum aut
+                            dignissimos sunt?</p>
+                    </div>
+                </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fas fa-pencil-alt"></i>
+                        <h3>Desing</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat non ullam suscipit quidem
+                            fuga
+                            officiis? Modi nihil alias, asperiores in ipsa non possimus voluptatibus fugit quod eum aut
+                            dignissimos sunt?</p>
+                    </div>
+                </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-js"></i>
+                        <h3>Javascript</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat non ullam suscipit quidem
+                            fuga
+                            officiis? Modi nihil alias, asperiores in ipsa non possimus voluptatibus fugit quod eum aut
+                            dignissimos sunt?</p>
+                    </div>
+                </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-bootstrap"></i>
+                        <h3>Boostrap</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat non ullam suscipit quidem
+                            fuga
+                            officiis? Modi nihil alias, asperiores in ipsa non possimus voluptatibus fugit quod eum aut
+                            dignissimos sunt?</p>
+                    </div>
+                </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-github"></i>
+                        <h3>Git e GitHub</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat non ullam suscipit quidem
+                            fuga
+                            officiis? Modi nihil alias, asperiores in ipsa non possimus voluptatibus fugit quod eum aut
+                            dignissimos sunt?</p>
+                    </div>
+                </div>
+                <div class="conhecimento-img-wrapper">
+                    <img src="./img/conhecimentos2.png" alt="imagem conhecimentos">
+                </div>
+            </div>
+        </section>
+        <section class="sessao-projetos">
+            <div class="sessao-header">
+                <h1>Projetos</h1>
+            </div>
+            <div class="projetos">
+                <div class="card">
+                    <div class="card-img-wrapper">
+                        <img src="./img/projeto1.jpg" alt="projeto ToDo">
+                    </div>
+                    <div class="card-info">
+                        <h2>ToDo List</h2>
+                        <h3>Javascript</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus totam doloribus, ut est vel
+                            qui quod maiores soluta voluptatum tenetur!</p>
+                        <button>Saiba Mais</button>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img-wrapper">
+                        <img src="./img/projeto2.jpg" alt="projeto Maratona">
+                    </div>
+                    <div class="card-info">
+                        <h2>Maratona</h2>
+                        <h3>HTML, CSS</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque ut delectus iure eos maxime
+                            repudiandae quia maiores incidunt nam magnam?</p>
+                        <button>Saiba Mais</button>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img-wrapper">
+                        <img src="./img/projeto3.jpg" alt="projeto Casa Bela">
+                    </div>
+                    <div class="card-info">
+                        <h2>Casa Bela</h2>
+                        <h3>HTML</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam doloribus officiis sint
+                            nobis omnis earum magni iste totam reiciendis dolores.</p>
+                        <button>Saiba Mais</button>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
 </body>
 <script src="./js/script.js"></script>
