--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
         </asider>
         <section class="sessao-conhecimentos" id="conhecimentos">
-            <div class="sessao-header">
+            <div class="sessao-header h1-c ">
                 <h1>Conhecimentos</h1>
             </div>
             <div class="conhecimentos">
@@ -91,7 +91,7 @@
                 <div class="conhecimento">
                     <div class="conhecimento-header">
                         <i class="fab fa-js"></i>
-                        <h3>Javascript</h3>
+                        <h3>JAVASCRIPT</h3>
                     </div>
                     <div class="conhecimento-text">
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat non ullam suscipit quidem
