:up: responsive 320px mobile

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 <h1>Projetos</h1>
             </div>
             <div class="projetos">
-                <div class="card">
+                <div class="card card-1">
                     <div class="card-img-wrapper">
                         <img src="./img/projeto1.jpg" alt="projeto ToDo">
                     </div>
@@ -146,7 +146,7 @@
                         <button class="btn">Saiba Mais</button>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card card-2">
                     <div class="card-img-wrapper">
                         <img src="./img/projeto2.jpg" alt="projeto Maratona">
                     </div>
@@ -158,7 +158,7 @@
                         <button class="btn">Saiba Mais</button>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card card-3">
                     <div class="card-img-wrapper">
                         <img src="./img/projeto03.jpg" alt="projeto Casa Bela">
                     </div>
