--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                     <li class="menu-item"><a href="#home" class="menu-link">Home</a></li>
                     <li class="menu-item"><a href="#conhecimentos" class="menu-link">Conhecimentos</a></li>
                     <li class="menu-item"><a href="#projetos" class="menu-link">Projetos</a></li>
-                    <li class="menu-item"><a href="#contato" class="menu-link">Contato</a></li>
-                    <li class="menu-item"><a href="#orcamento" class="menu-link">Orçamento</a></li>
+                    <li class="menu-item menu-contato"><a href="#contato" class="menu-link">Contato</a></li>
+                    <li class="menu-item menu-orcamento"><a href="#orcamento" class="menu-link">Orçamento</a></li>
                 </ul>
             </nav>
             <div class="social-media">
